# mysql_cdc

./: Cargo.toml
examples/: binlog_client.rs
src/: binlog_client.rs  binlog_events.rs  binlog_reader.rs  configure.rs  connect.rs  errors.rs  extensions.rs  lib.rs  packet_channel.rs
src/commands/: auth_plugin_switch_command.rs  authenticate_command.rs  dump_binlog_command.rs  dump_binlog_gtid_command.rs  query_command.rs
src/constants/: capability_flags.rs  mod.rs
src/providers/mariadb/: mariadb_provider.rs
src/providers/mysql/: mysql_provider.rs
src/providers/mysql/gtid/: gtid_set.rs  uuid.rs
src/responses/: response_type.rs
