[package]
name = "mysql_cdc"
version = "0.2.0"
edition = "2021"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
hex = "0.4.3"
rsa = "0.9.2"
mysql_common = "0.30.5"
wasmedge_wasi_socket = "0.5.0"

[patch.crates-io]
mysql_common = { git = 'https://github.com/markcty/rust_mysql_common' }
