[package]
name = "mysql_cdc"
version = "0.2.0"
edition = "2021"
authors = ["Ruslan Ulianets <ruslan.ulianets@gmail.com>"]
description = "MySQL/MariaDB binlog change data capture (CDC) connector for Rust"
homepage = "https://github.com/rusuly/mysql_cdc"
repository = "https://github.com/rusuly/mysql_cdc"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
hex = "0.4.3"
rsa = "0.9.2"
mysql_common = "0.30.6"
wasmedge_wasi_socket = "0.5.0"
thiserror = "1.0.40"
tokio_wasi = { version = "1", features = [
  "rt",
  "time",
  "test-util",
  "macros",
  "io-util",
  "net",
] }
futures-core = { version = "0.3", default-features = false }
async-stream = "0.3.5"
futures-util = { version = "0.3.28" }
